k8s/staging/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: rs-service-staging
  labels:
    app: api
    environment: staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api
    environment: staging
